<?xml version="1.0" encoding="utf-8"?>
<layout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable
        name="welcomeFragment"
        type="com.education.englishquiz.WelcomeFragment" />
</data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".WelcomeFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="end"
            android:text="@string/welcome_message"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/welcome_page"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:contentDescription="@string/quiz_image" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:hint="@string/name"
            android:textSize="20sp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/grade_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:hint ="@string/grade"
            android:textSize="20sp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cleat_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:onClick="@{() -> welcomeFragment.clear()}"
                android:text="@string/clear"
                android:textSize="20sp" />

            <Button
                android:id="@+id/start_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:onClick="@{() -> welcomeFragment.start()}"
                android:text="@string/start_quiz"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>
</layout>