<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/app_name"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.education.englishquiz.WelcomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_quizFragment"
            app:destination="@id/quizFragment" />
        <argument
            android:name="user"
            app:argType="com.education.englishquiz.model.User" />

    </fragment>
    <fragment
        android:id="@+id/quizFragment"
        android:name="com.education.englishquiz.QuizFragment"
        android:label="@string/quiz_page_title"
        tools:layout="@layout/fragment_quiz">
        <action
            android:id="@+id/action_quizFragment_to_summeryFragment"
            app:destination="@id/summeryFragment" />
        <action
            android:id="@+id/action_quizFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
        <argument
            android:name="quesList"
            app:argType="com.education.englishquiz.model.Questions[]" />
    </fragment>
    <fragment
        android:id="@+id/summeryFragment"
        android:name="com.education.englishquiz.SummeryFragment"
        android:label="@string/summary_page_title"
        tools:layout="@layout/fragment_summery">
        <action
            android:id="@+id/action_summeryFragment_to_welcomeFragment2"
            app:destination="@id/welcomeFragment" />
    </fragment>
</navigation>